使用百度地图插件

--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "echarts": "^5.0.2",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
+    "mapvgl": "*",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
-    "echarts": "^5.0.2",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
