--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "vue-baidu-map": "^0.21.22",
     "vue-count-to": "^1.0.13",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "xgplayer": "^2.20.0",
+    "xgplayer-flv": "^2.4.20",
+    "xgplayer-hls": "^2.4.20"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
